feat: implement Android support based on GLSurfaceView, add simple Android example