@@ -1,22 +1,24 @@
 plugins {
-    alias(libs.plugins.kotlin)
+    alias(libs.plugins.kotlin.jvm)
     alias(libs.plugins.kotlin.compose)
     alias(libs.plugins.compose)
 }
 
+group = "dev.silenium.compose.gl.examples"
 val composeGlVersion = "0.11.0-rc.1"
 
-val useParent: Boolean = project.ext.properties.getOrDefault("examples.use-parent", "true").toString().toBoolean()
+val useParent: Boolean =
+    project.ext.properties.getOrDefault("examples.use-parent", "true").toString().toBoolean()
 
 dependencies {
     implementation(compose.desktop.currentOs)
     if (useParent) {
-        implementation(project(":"))
+        implementation(project(":lib"))
     } else {
         implementation("dev.silenium.compose.gl:compose-gl:${composeGlVersion}")
     }
     implementation(libs.slf4j.api)
-    runtimeOnly("ch.qos.logback:logback-classic:1.5.32")
+    runtimeOnly(libs.logback.classic)
 }
 
 kotlin {
@@ -25,6 +27,7 @@ kotlin {
 
 compose.desktop {
     application {
+        jvmArgs("--enable-native-access=ALL-UNNAMED")
         mainClass = "dev.silenium.compose.gl.examples.skia_gl.MainKt"
     }
 }
